# EasyarTest

./: .gitignore  CMakeLists.txt  EasyarTest.sln  README.md  readme.txt
EasyarTest/: EasyarTest.cpp  EasyarTest.vcxproj  EasyarTest.vcxproj.filters  ReadMe.txt  Thumbs.db  stdafx.cpp
libs/: EasyAR.lib  opencv_world320.lib  opencv_world320d.lib
src/: EasyarTest.cpp
